--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "pdf-to-mp3",
+  "name": "PDF-to-MP3",
   "version": "1.0.0",
-  "description": "![PDF Icon](https://github.com/jesusb25/PDF-to-MP3/blob/main/images/icons8-bookmark-64.png)",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "google-tts-api": "^2.0.2",
+    "netlify-cli": "^15.10.0",
+    "netlify-lambda": "^2.0.16",
+    "node-gtts": "^2.0.2",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdfjs-dist": "^2.8.335"
+  },
+  "devDependencies": {
+    "babel-loader": "^9.1.3",
+    "dotenv": "^16.3.1",
+    "nodemon": "^2.0.12"
   }
 }
